--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                     </div>
 
                     <!--==================== PLACES CARD 4 ====================-->
-                    <div class="place__card">
-                        <img src="assets/img/place4.jpg" alt="" class="place__img">
+<!--                     <div class="place__card">
+<!--                         <img src="assets/img/place4.jpg" alt="" class="place__img">
                         
                         <div class="place__content">
                             <span class="place__rating">
@@ -300,8 +300,8 @@
 
                             <div class="place__data">
                                 <h3 class="place__title">Whitehaven</h3>
-                                <span class="place__subtitle">Australia</span>
-                                <span class="place__price">$2499</span>
+                                <span class="place__subtitle">Australia</span> -->
+<!--                                 <span class="place__price">$2499</span>
                             </div>
                         </div>
 
@@ -309,9 +309,9 @@
                             <i class="ri-arrow-right-line"></i>
                         </button>
                     </div>
-
+ -->
                     <!--==================== PLACES CARD 5 ====================-->
-                    <div class="place__card">
+<!--                     <div class="place__card">
                         <img src="assets/img/place5.jpg" alt="" class="place__img">
                         
                         <div class="place__content">
@@ -332,8 +332,8 @@
                         </button>
                     </div>
                 </div>
-            </section>
-
+            </section> -->
+ -->
             <!--==================== SUBSCRIBE ====================-->
             <section class="subscribe section">
                 <div class="subscribe__bg">
