--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Website Travel</title>
+        <title>Anoushka Bhattacharya</title>
     </head>
     <body>
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Travel</a>
+                <a href="#" class="nav__logo">Anoushka</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
@@ -31,10 +31,10 @@
                             <a href="#about" class="nav__link">About</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#discover" class="nav__link">Discover</a>
+                            <a href="#discover" class="nav__link">Other</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#place" class="nav__link">Places</a>
+                            <a href="#place" class="nav__link">Contact</a>
                         </li>
                     </ul>
 
@@ -60,7 +60,7 @@
 
                 <div class="home__container container grid">
                     <div class="home__data">
-                        <span class="home__data-subtitle">Discover your place</span>
+                        <span class="home__data-subtitle">Welcome to my website!</span>
                         <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
                         <a href="#" class="button">Explore</a>
 
