--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta name="description" content="Anoushka Bhattacharya is a 15 year old student and an aspiring computer engineer.
+                                          She is also a front-end web designer and a learning full stack developer.">
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
 
         <!--=============== REMIXICONS ===============-->
