--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">5 best places to visit</span>
+                            <span class="home__info-title">Visit my personal blog</span>
                             <a href="" class="button button--flex button--link home__info-button">
                                 More <i class="ri-arrow-right-line"></i>
                             </a>
@@ -387,8 +387,8 @@
                             we offer you the <br> experience.
                         </p>
                         <div>
-                            <a href="https://www.facebook.com/" target="_blank" class="footer__social">
-                                <i class="ri-facebook-box-fill"></i>
+                            <a href="#" target="_blank" class="footer__social">
+                                <i class="heroicon-s-link"></i>
                             </a>
                             <a href="https://twitter.com/" target="_blank" class="footer__social">
                                 <i class="ri-twitter-fill"></i>
