--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         </p>
                         <div>
                             <a href="#" target="_blank" class="footer__social">
-                                <i class="heroicon-s-link"></i>
+                                <i class="ri-link-m"></i>
                             </a>
                             <a href="https://twitter.com/" target="_blank" class="footer__social">
                                 <i class="ri-twitter-fill"></i>
