--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     </div>
 
                     <div class="home__social">
-                        <a href="https://www.facebook.com/" target="_blank" class="home__social-link">
-                            <i class="ri-facebook-box-fill"></i>
+                        <a href="#" target="_blank" class="home__social-link">
+                            <i class="ri-speed-mini-fill"></i>
                         </a>
                         <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
                             <i class="ri-instagram-fill"></i>
