--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                     </div>
 
                     <div class="home__social">
-                        <a href="#" target="_blank" class="home__social-link">
+                        <a href="https://lu.ma/anoushka" target="_blank" class="home__social-link">
                             <i class="ri-speed-mini-fill"></i>
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+                        <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="home__social-link">
                             <i class="ri-instagram-fill"></i>
                         </a>
-                        <a href="https://twitter.com/" target="_blank" class="home__social-link">
+                        <a href="https://twitter.com/anoushka_bh/" target="_blank" class="home__social-link">
                             <i class="ri-twitter-fill"></i>
                         </a>
                     </div>
@@ -387,13 +387,13 @@
                             we offer you the <br> experience.
                         </p>
                         <div>
-                            <a href="#" target="_blank" class="footer__social">
+                            <a href="https://lu.ma/anoushka" target="_blank" class="footer__social">
                                 <i class="ri-link-m"></i>
                             </a>
-                            <a href="https://twitter.com/" target="_blank" class="footer__social">
+                            <a href="https://twitter.com/anoushka_bh" target="_blank" class="footer__social">
                                 <i class="ri-twitter-fill"></i>
                             </a>
-                            <a href="https://www.instagram.com/" target="_blank" class="footer__social">
+                            <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="footer__social">
                                 <i class="ri-instagram-fill"></i>
                             </a>
                             <a href="https://www.youtube.com/" target="_blank" class="footer__social">
