--- a/index.html
+++ b/index.html
@@ -69,13 +69,16 @@
 
                     <div class="home__social">
                         <a href="https://lu.ma/anoushka" target="_blank" class="home__social-link">
-                            <i class="ri-speed-mini-fill"></i>
+                            <i class="ri-mouse-fill"></i>
                         </a>
                         <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="home__social-link">
                             <i class="ri-instagram-fill"></i>
                         </a>
                         <a href="https://twitter.com/anoushka_bh/" target="_blank" class="home__social-link">
                             <i class="ri-twitter-fill"></i>
+                        </a>
+                         <a href="https://lu.ma/anoushkabh" target="_blank" class="home__social-link">
+                            <i class="ri-hand-coin-line"></i>
                         </a>
                     </div>
 
