--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <span class="home__data-subtitle">Welcome to my website!</span>
-                        <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
+                        <h1 class="home__data-title">Who am I?<br> Dancer <b>Developer<br> Singer</b></h1>
                         <a href="#" class="button">Explore</a>
 
                     </div>
 
                     <div class="home__social">
                         <a href="https://lu.ma/anoushka" target="_blank" class="home__social-link">
-                            <i class="ri-mouse-fill"></i>
+                            <i class="ri-clipboard-line"></i>
                         </a>
                         <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="home__social-link">
                             <i class="ri-instagram-fill"></i>
@@ -101,7 +101,7 @@
             <section class="about section" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">More Information <br> About The Best Beaches</h2>
+                            <h2 class="section__title about__title">More Information <br> About Anoushka </h2>
                         <p class="about__description">You can find the most beautiful and pleasant places at the best 
                             prices with special discounts, you choose the place we will guide you all the way to wait, get your 
                             place now.
