--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <span class="home__data-subtitle">Welcome to my website!</span>
-                        <h1 class="home__data-title">Who am I?<br> Dancer <b>Developer<br> Singer</b></h1>
+                        <h1 class="home__data-title">Who am I?<br> Dancer <b>Developer<br> Singer</b> Designer</h1>
                         <a href="#" class="button">Explore</a>
 
                     </div>
