--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
                     <div class="home__social">
                         <a href="https://lu.ma/anoushka" target="_blank" class="home__social-link">
-                            <i class="ri-clipboard-line"></i>
+                            <i class="ri-article-line"></i>
                         </a>
                         <a href="https://www.instagram.com/anouushhkaa/" target="_blank" class="home__social-link">
-                            <i class="ri-instagram-fill"></i>
+                            <i class="ri-instagram-line"></i>
                         </a>
                         <a href="https://twitter.com/anoushka_bh/" target="_blank" class="home__social-link">
-                            <i class="ri-twitter-fill"></i>
+                            <i class="ri-twitter-line"></i>
                         </a>
                          <a href="https://lu.ma/anoushkabh" target="_blank" class="home__social-link">
                             <i class="ri-hand-coin-line"></i>
