--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
                    <section class="about section" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                            <h2 class="section__title about__title">More Information <br> About Anoushka </h2>
-                        <p class="about__description">You can find the most beautiful and pleasant places at the best 
-                            prices with special discounts, you choose the place we will guide you all the way to wait, get your 
-                            place now.
+                            <h2 class="section__title about__title">Skillset</h2>
+                        <p class="about__description">Front end developer. 
                         </p>
                         <a href="#" class="button">Reserve a place</a>
                     </div>
