--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
             </section>
             
                                          <!-- SKILLSET -->
-                   <section class="about section" id="about">
-                <div class="about__container container grid">
-                    <div class="about__data">
-                            <h2 class="section__title about__title">Skillset</h2>
-                        <p class="about__description">Front end developer. 
+                   <section class="about2 section" id="about2">
+                <div class="about2__container container grid">
+                    <div class="about2__data">
+                            <h2 class="section__title about2__title">Skillset</h2>
+                        <p class="about2__description">Front end developer. 
                         </p>
                         <a href="#" class="button">Reserve a place</a>
                     </div>
 
-                    <div class="about__img">
-                        <div class="about__img-overlay">
+                    <div class="about2__img">
+                        <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
 
