--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 
                     <div class="about2__img">
                         <div class="about2__img-overlay">
-                            <img src="assets/img/about1.jpg" alt="" class="about__img-one">
+                            <img src="assets/img/about1.jpg" alt="" class="about2__img-one">
                         </div>
 
-                        <div class="about__img-overlay">
+                        <div class="about2__img-overlay">
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
                     </div>
