--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                     <div class="about2__img">
                         <div class="about2__img-overlay">
-                            <img src="assets/img/about1.jpg" alt="" class="about2__img-one">
+                            <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
 
                         <div class="about2__img-overlay">
