--- a/index.html
+++ b/index.html
@@ -126,12 +126,14 @@
                 <div class="about2__container container grid">
                     <div class="about2__data">
                             <h2 class="section__title about2__title">Skillset</h2>
-                        <p class="about2__description">Front end developer. 
+                        <p class="about2__description">Front end developer. Worked in Web Designing (Frontend- HTML, CSS, JavaScript), <br>
+                            Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>Motion Graphics (After effects, Premiere pro)<br>
+                            Python Programming, Ethical Hacking <br> Android App Development (Android Studio)
                         </p>
-                        <a href="#" class="button">Reserve a place</a>
+                        <a href="#" class="button">See More</a>
                     </div>
 
-                    <div class="about2__img">
+<!--                     <div class="about2__img">
                         <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
@@ -140,7 +142,7 @@
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </section>
             
             <!--==================== DISCOVER ====================-->
