--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                    <section class="about2 section" id="about2">
                 <div class="about2__container container grid">
                     <div class="about2__data">
-                            <h2 class="section__title about2__title" text-align="right">Skillset</h2>
+                            <h2 class=" about2__title" text-align="right">Skillset</h2>
                         <p class="about2__description">Worked in Web Designing (Frontend- HTML, CSS, JavaScript), <br>
                             Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>Motion Graphics (After effects, Premiere pro)<br>
                             Python Programming, Ethical Hacking <br> Android App Development (Android Studio)
