--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <a href="#" class="button">See More</a>
                     </div>
 
-<!--                     <div class="about2__img">
+                  <div class="about2__img">
                         <div class="about2__img-overlay">
                             <img src="assets/img/about1.jpg" alt="" class="about__img-one">
                         </div>
@@ -142,7 +142,7 @@
                             <img src="assets/img/about2.jpg" alt="" class="about__img-two">
                         </div>
                     </div>
-                </div> -->
+                </div> 
             </section>
             
             <!--==================== DISCOVER ====================-->
