--- a/index.html
+++ b/index.html
@@ -135,9 +135,20 @@
                     </div>
                     <div class="about2__data">
                             <h2 class=" about2__title" text-align="right">Skillset</h2>
-                        <p class="about2__description">Worked in Web Designing (Frontend- HTML, CSS, JavaScript), <br>
-                            Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>Motion Graphics (After effects, Premiere pro)<br>
-                            Python Programming, Ethical Hacking <br> Android App Development (Android Studio)
+                        <p class="about2__description">Worked in : <br>
+                            Web Designing (Frontend- HTML, CSS, JavaScript), <br>
+                            Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>
+                            Motion Graphics (After effects, Premiere pro)<br>
+                            Python Programming, Ethical Hacking <br> 
+                            Android App Development (Android Studio) <br> <br>
+                            3D Designing (Blender) <br> <br>
+                            
+                            Currently learning: <br>
+                            UI/UX Design <br>
+                            Backend Framework (JavaScript, Python, PHP, Java, C#, NodeJS) <br>
+                            Frameworks: Express, React, Gatsby, NextJS and Django <br>
+                            Database: MongoDB, PostgreSQL, MySQL, and SQLite <br>
+                            Mobile Development with Flutter
                         </p>
                         <a href="#" class="button">See More</a>
                     </div>
