--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
                     </div>
                     <div class="about2__data">
                             <h2 class=" about2__title" text-align="right">Skillset</h2>
-                        <p class="about2__description">Worked in : <br>
+                        <p class="about2__description"><b> Worked in : <br> </b>
                             Web Designing (Frontend- HTML, CSS, JavaScript), <br>
                             Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>
                             Motion Graphics (After effects, Premiere pro)<br>
                             Python Programming, Ethical Hacking <br> 
-                            Android App Development (Android Studio) <br> <br>
+                            Android App Development (Android Studio) <br>
                             3D Designing (Blender) <br> <br>
                             
-                            Currently learning: <br>
+                            <b> Currently learning: <br> </b>
                             UI/UX Design <br>
                             Backend Framework (JavaScript, Python, PHP, Java, C#, NodeJS) <br>
                             Frameworks: Express, React, Gatsby, NextJS and Django <br>
