--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             
                             <b> Currently learning: <br> </b>
                             UI/UX Design <br>
-                            Backend Framework (JavaScript, Python, PHP, Java, C#, NodeJS) <br>
+                            Backend Framework (Python, PHP, Java, C#, NodeJS) <br>
                             Frameworks: Express, React, Gatsby, NextJS and Django <br>
                             Database: MongoDB, PostgreSQL, MySQL, and SQLite <br>
                             Mobile Development with Flutter
