--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                             Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>
                             Motion Graphics (After effects, Premiere pro)<br>
                             Python Programming, Ethical Hacking <br> 
-                            Android App Development (Android Studio) <br>
-                            3D Designing (Blender) <br> <br>
+                            Android App Development (Android Studio)<br><br>
                             
                             <b> Currently learning: <br> </b>
+                            3D Designing (Blender) <br>
                             UI/UX Design <br>
                             Backend Framework (Python, PHP, Java, C#, NodeJS) <br>
                             Frameworks: Express, React, Gatsby, NextJS and Django <br>
