--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="about2__data">
                             <h2 class=" about2__title" text-align="right">Skillset</h2>
                         <p class="about2__description"><b> Worked in : <br> </b>
-                            Web Designing (Frontend- HTML, CSS, JavaScript), <br>
+                            Web Designing (Frontend- HTML, CSS, JavaScript) <br>
                             Graphic Designing in 2D (Illustrator, Photoshop, Figma)<br>
                             Motion Graphics (After effects, Premiere pro)<br>
                             Python Programming, Ethical Hacking <br> 
@@ -150,7 +150,7 @@
                             Database: MongoDB, PostgreSQL, MySQL, and SQLite <br>
                             Mobile Development with Flutter
                         </p>
-                        <a href="#" class="button">See More</a>
+                        <a href="https://lu.ma/anoushka" class="button">See More</a>
                     </div>
                  
                 </div> 
