--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
                 <div class="about__container container grid">
                     <div class="about__data">
                             <h2 class="section__title about__title">More Information <br> About Anoushka </h2>
-                        <p class="about__description">You can find the most beautiful and pleasant places at the best 
-                            prices with special discounts, you choose the place we will guide you all the way to wait, get your 
-                            place now.
+                        <p class="about__description">Anoushka is a 15 year old student studying in 11th grade at DPS R.K. Puram. <br>
+                          She is a front end web designer and an aspiring computer scientist. Alongside being a recipient of a national level
+                            diploma in Kathak Dance, she is also a Indian Classical Music Artist. She also enjoys two dimensional graphic designing 
+                            as well as creative writing.
                         </p>
-                        <a href="#" class="button">Reserve a place</a>
+                        <a href="#" class="button">My Blog</a>
                     </div>
 
                     <div class="about__img">
@@ -158,7 +159,7 @@
             
             <!--==================== DISCOVER ====================-->
             <section class="discover section" id="discover">
-                <h2 class="section__title">Discover the most <br> attractive places</h2>
+                <h2 class="section__title">Explore my field <br>of interests</h2>
                 
                 <div class="discover__container container swiper-container">
                     <div class="swiper-wrapper">
@@ -166,8 +167,8 @@
                         <div class="discover__card swiper-slide">
                             <img src="assets/img/discover1.jpg" alt="" class="discover__img">
                             <div class="discover__data">
-                                <h2 class="discover__title">Bali</h2>
-                                <span class="discover__description">24 tours available</span>
+                                <h2 class="discover__title">Mathematics</h2>
+                                <span class="discover__description"></span>
                             </div>
                         </div>
 
@@ -175,8 +176,8 @@
                         <div class="discover__card swiper-slide">
                             <img src="assets/img/discover2.jpg" alt="" class="discover__img">
                             <div class="discover__data">
-                                <h2 class="discover__title">Hawaii</h2>
-                                <span class="discover__description">15 tours available</span>
+                                <h2 class="discover__title">Physics</h2>
+                                <span class="discover__description"></span>
                             </div>
                         </div>
 
@@ -184,8 +185,8 @@
                         <div class="discover__card swiper-slide">
                             <img src="assets/img/discover3.jpg" alt="" class="discover__img">
                             <div class="discover__data">
-                                <h2 class="discover__title">Hvar</h2>
-                                <span class="discover__description">18 tours available</span>
+                                <h2 class="discover__title">Chemistry</h2>
+                                <span class="discover__description"></span>
                             </div>
                         </div>
 
@@ -193,8 +194,19 @@
                         <div class="discover__card swiper-slide">
                             <img src="assets/img/discover4.jpg" alt="" class="discover__img">
                             <div class="discover__data">
-                                <h2 class="discover__title">Whitehaven</h2>
-                                <span class="discover__description">32 tours available</span>
+                                <h2 class="discover__title">Full Stack Development</h2>
+                                <span class="discover__description"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+             <!--==================== DISCOVER 5 ====================-->
+                        <div class="discover__card swiper-slide">
+                            <img src="assets/img/discover4.jpg" alt="" class="discover__img">
+                            <div class="discover__data">
+                                <h2 class="discover__title">Engineering</h2>
+                                <span class="discover__description"></span>
                             </div>
                         </div>
                     </div>
