--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             
             <!--==================== DISCOVER ====================-->
             <section class="discover section" id="discover">
-                <h2 class="section__title">Explore my field <br>of interests</h2>
+                <h2 class="section__title">Explore my academic <br>field of interests</h2>
                 
                 <div class="discover__container container swiper-container">
                     <div class="swiper-wrapper">
