--- a/index.html
+++ b/index.html
@@ -201,12 +201,21 @@
                         </div>
                     </div>
                 </div>
-            </section>
              <!--==================== DISCOVER 5 ====================-->
                         <div class="discover__card swiper-slide">
                             <img src="assets/img/discover4.jpg" alt="" class="discover__img">
                             <div class="discover__data">
                                 <h2 class="discover__title">Engineering</h2>
+                                <span class="discover__description"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <!--==================== DISCOVER 4 ====================-->
+                        <div class="discover__card swiper-slide">
+                            <img src="assets/img/discover4.jpg" alt="" class="discover__img">
+                            <div class="discover__data">
+                                <h2 class="discover__title">Full Stack Development</h2>
                                 <span class="discover__description"></span>
                             </div>
                         </div>
