--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                             <h2 class="section__title about__title">More Information <br> About Anoushka </h2>
                         <p class="about__description">Anoushka is a 15 year old student studying in 11th grade at DPS R.K. Puram. <br>
                           She is a front end web designer and an aspiring computer scientist. Alongside being a recipient of a national level
-                            diploma in Kathak Dance, she is also a Indian Classical Music Artist. She also enjoys two dimensional graphic designing 
+                            diploma in Kathak Dance, she is also a Indian Classical Music Artist. <br>
+                            She also enjoys two dimensional graphic designing 
                             as well as creative writing.
                         </p>
                         <a href="#" class="button">My Blog</a>
@@ -345,7 +346,7 @@
                         </button>
                     </div>
 
-                    <!--==================== PLACES CARD 4 ====================-->
+<!--                     <!--==================== PLACES CARD 4 ====================-->
                          <div class="place__card">
                        <img src="assets/img/place4.jpg" alt="" class="place__img">
                         
@@ -387,7 +388,7 @@
                         <button class="button button--flex place__button">
                             <i class="ri-arrow-right-line"></i>
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </section> 
 
