--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </button>
                     </div>
 
-<!--                     <!--==================== PLACES CARD 4 ====================-->
+<!--                     ==================== PLACES CARD 5 ====================
                          <div class="place__card">
                        <img src="assets/img/place4.jpg" alt="" class="place__img">
                         
@@ -358,7 +358,7 @@
 
                             <div class="place__data">
                                 <h3 class="place__title">Whitehaven</h3>
-                                <span class="place__subtitle">Australia</span> -->
+                                <span class="place__subtitle">Australia</span>
                                 <span class="place__price">$2499</span>
                             </div>
                         </div>
@@ -368,7 +368,7 @@
                         </button>
                     </div>
  
-                    <!--==================== PLACES CARD 5 ====================-->
+                    <!--==================== PLACES CARD 5 ====================
                       <div class="place__card">
                         <img src="assets/img/place5.jpg" alt="" class="place__img">
                         
