--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
                             </span>
 
                             <div class="place__data">
-                                <h3 class="place__title">Bali</h3>
-                                <span class="place__subtitle">Indonesia</span>
-                                <span class="place__price">$2499</span>
+                                <h3 class="place__title">Web Design</h3>
+                                <span class="place__subtitle">Full Stack</span>
+                                <span class="place__price">Portfolio</span>
                             </div>
                         </div>
 
@@ -313,9 +313,9 @@
                             </span>
 
                             <div class="place__data">
-                                <h3 class="place__title">Bora Bora</h3>
-                                <span class="place__subtitle">Polinesia</span>
-                                <span class="place__price">$1599</span>
+                                <h3 class="place__title">Graphic Design</h3>
+                                <span class="place__subtitle">2 Dimension</span>
+                                <span class="place__price">Portfolio</span>
                             </div>
                         </div>
 
@@ -335,9 +335,9 @@
                             </span>
 
                             <div class="place__data">
-                                <h3 class="place__title">Hawaii</h3>
-                                <span class="place__subtitle">EE.UU</span>
-                                <span class="place__price">$3499</span>
+                                <h3 class="place__title">3D Design</h3>
+                                <span class="place__subtitle">3 Dimension</span>
+                                <span class="place__price">Portfolio</span>
                             </div>
                         </div>
 
