--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <section class="sponsor section">
                 <div class="sponsor__container container grid">
                     <div class="sponsor__content">
-                        <img src="assets/img/sponsors1.png" alt="" class="sponsor__img">
+                        <img src="assets/img/spotify-icon.png" alt="" class="sponsor__img">
                     </div>
                     <div class="sponsor__content">
                         <img src="assets/img/sponsors2.png" alt="" class="sponsor__img">
