--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 </div>
             </section>
             
-            <!--==================== SPONSORS ====================-->
+            <!--==================== SPONSORS 
             <section class="sponsor section">
                 <div class="sponsor__container container grid">
                     <div class="sponsor__content">
@@ -432,7 +432,7 @@
                     </div>
                 </div>
             </section>
-        </main>
+        </main> ====================-->
 
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
