--- a/index.html
+++ b/index.html
@@ -456,6 +456,9 @@
                             <a href="https://www.youtube.com/" target="_blank" class="footer__social">
                                 <i class="ri-youtube-line"></i>
                             </a>
+                            <a href="https://lu.ma/anoushkabh" target="_blank" class="footer__social">
+                             <i class="ri-hand-coin-line"></i>
+                            </a>
                         </div>
                     </div>
     
@@ -496,7 +499,7 @@
                                 <a href="" class="footer__link">FAQs</a>
                             </li>
                             <li class="footer__item">
-                                <a href="" class="footer__link">Hire/Buy</a>
+                                <a href="https://lu.ma/anoushkabh" class="footer__link">Hire/Buy</a>
                             </li>
                             <li class="footer__item">
                                 <a href="" class="footer__link">Contact Us</a>
